--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,14 @@
+html, body {
+    overflow: hidden;
+    width   : 100%;
+    height  : 100%;
+    margin  : 0;
+    padding : 0;
+}
+
 /* uhh… */
 canvas {
-    width: 480px;
-    height: 320px;
+    width   : 100%;
+    height  : 100%;
+    touch-action: none;
 }
