Factor BabylonJS to its own React component.

--- a/static/style.css
+++ b/static/style.css
@@ -7,8 +7,11 @@ html, body {
 }
 
 /* uhh… */
-canvas {
+#game-container, canvas {
     width   : 100%;
     height  : 100%;
+}
+
+#game-container canvas {
     touch-action: none;
 }
