--- a/static/style.css
+++ b/static/style.css
@@ -7,8 +7,7 @@ html, body {
 }
 
 
-game-container, canvas {
->>>>>>> 5cff24a95fe24d9f5c93c715799f7ad95da7ca25
+#game-container, canvas {
     width   : 100%;
     height  : 100%;
 }
